# AILive-Backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  cookiecutter.json  docker-compose.yml  invoke_tasks.py  pyproject.toml  template.env
.circleci/: config.yml
.github/: pull_request_template.md
canvass_api_model_store/: main.py
canvass_api_model_store/actions/: README.md
canvass_api_model_store/api/: auth.py  constants.py  model.py
canvass_api_model_store/api/v1/: __init__.py
canvass_api_model_store/api/v1/auth/: __init__.py  database.py  models.py  schemas.py  services.py
canvass_api_model_store/api/v1/model_store/: services.py
canvass_api_model_store/core/: app.py  config.py  db.py
canvass_api_model_store/migrations/: env.py
canvass_api_model_store/models/: README.md  create_db.py  database.py  models.py  schemas.py
canvass_api_model_store/repositories/: __init__.py
canvass_api_model_store/tests/: conftest.py  test_version.py
canvass_api_model_store/tests/factories/: __init__.py
hooks/: post_gen_project.py
scripts/: start.sh
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  invoke_tasks.py  pyproject.toml  template.env
{{ cookiecutter.project_slug }}/.circleci/: config.yml
{{ cookiecutter.project_slug }}/scripts/: start.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/: __init__.py  main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/actions/: README.md  __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/api/: __init__.py  health.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/api/v1/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/core/: __init__.py  app.py  config.py  db.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/migrations/: README.md  env.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/models/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/repositories/: README.md
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/tests/: conftest.py  test_version.py
